# log-narrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: PHASE10_REFERENCE.md  design.md  phase10_summary.md  rules.md  schema.json
examples/: run_demo.ps1
include/logstory/analysis/: anomaly_detector.hpp  correlation_extractor.hpp  episode.hpp  episode_builder.hpp  event_index.hpp  stats.hpp  stats_builder.hpp  window.hpp
include/logstory/cli/: app.hpp  args.hpp
include/logstory/core/: error.hpp  event.hpp  event_id.hpp  logger.hpp  severity.hpp  source_ref.hpp  tags.hpp  time.hpp
include/logstory/io/: dir_scanner.hpp  file_reader.hpp  multiline_framer.hpp  output_manager.hpp  raw_line.hpp  record.hpp  record_framer.hpp  stdin_reader.hpp
include/logstory/narrative/: json_writer.hpp  markdown_writer.hpp  narrator.hpp  report.hpp  schema_version.hpp  timeline_writer.hpp
include/logstory/parsing/: event_parser.hpp  kv_extractor.hpp  severity_detector.hpp  timestamp_detector.hpp
include/logstory/rules/: finding.hpp  rule.hpp  rule_registry.hpp
include/logstory/rules/builtin/: crash_loop_rule.hpp  error_burst_after_change_rule.hpp  retry_to_timeout_rule.hpp
src/: main.cpp
src/analysis/: anomaly_detector.cpp  correlation_extractor.cpp  episode_builder.cpp  event_index.cpp  stats.cpp  stats_builder.cpp  window.cpp
src/cli/: app.cpp  args.cpp
src/core/: logger.cpp  severity.cpp  source_ref.cpp
src/io/: dir_scanner.cpp  file_reader.cpp  multiline_framer.cpp  output_manager.cpp  record_framer.cpp  stdin_reader.cpp
src/narrative/: json_writer.cpp  markdown_writer.cpp  narrator.cpp  timeline_writer.cpp
src/parsing/: event_parser.cpp  kv_extractor.cpp  severity_detector.cpp  timestamp_detector.cpp
src/rules/: rule_registry.cpp
src/rules/builtin/: crash_loop_rule.cpp  error_burst_after_change_rule.cpp  retry_to_timeout_rule.cpp
tests/: CMakeLists.txt
tests/fixtures/logs/: data.jsonl  mixed_jsonl.jsonl  windows_endings.txt
tests/integration/: test_golden_reports.cpp
tests/unit/: test_analysis.cpp  test_dir_scanner.cpp  test_episode_builder.cpp  test_event.cpp  test_file_reader.cpp  test_multiline_framer.cpp  test_narrative.cpp  test_output_phase10.cpp  test_parsing.cpp  test_record_framer.cpp  test_rules.cpp  test_severity.cpp  test_source_ref.cpp  test_stats.cpp  test_status.cpp  test_stdin_reader.cpp  test_timestamp_detector.cpp
